Implement Heap/MinHeap/MaxHeap

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,19 @@
 {
-    "compilerOptions": {
-      "target": "es2015",
-      "baseUrl": ".",
-      "rootDir": ".",
-      "outDir": "./dist",
-      "allowJs": false,
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "noImplicitAny": true,
-      "experimentalDecorators": true,
-      "resolveJsonModule": true,
-      "esModuleInterop": true,
-      "declaration": true,
-      "sourceMap": true
-    },
-    "include": ["index.ts"],
-    "exclude": ["**_deprecated_**"]
-  }
-  
+  "compilerOptions": {
+    "target": "es2015",
+    "baseUrl": ".",
+    "rootDir": ".",
+    "outDir": "./dist",
+    "allowJs": false,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "sourceMap": true
+  },
+  "include": ["src"],
+  "exclude": ["**_deprecated_**"]
+}
