--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "rimraf ./dist && tsc",
+    "build": "rimraf ./dist && tsc"
   },
   "author": "xrensiu@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.0.13",
+    "rimraf": "^3.0.2",
     "typescript": "^3.9.5"
   }
 }
